--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -13,23 +13,29 @@
 }
 
 body {
-	background-color: #333;
+	background-color: #999999;
 	font-family: 'PT Sans';
 }
 
 .scene {
-	width: 1136px;
-	height: 708px;
+	//max-width: 1136px;
+	//max-width: 80%;
+	//height: 708px;
 	margin: auto;
 	position: relative;
+	background-color: #999999;
 
-	box-shadow: 0px 0px 0px 5px #000;
+	box-shadow: 0 -20px 30px 0px rgba(0,0,0,0.4);
+
+	img {
+		width: 100%;
+	}
 }
 
 .info-area {
 	position: absolute;
-	top: 425px;
-	height: 219px;
+	top: 60%;
+	min-height: 219px;
 	padding: 32px;
 }
 
@@ -39,11 +45,13 @@ p, a {
 
 h1 {
 	margin: auto;
-	margin-top: 30px;
-	margin-bottom: 30px;
-	width: 1136px;
+	padding-top: 30px;
+	padding-bottom: 30px;
+	width: 100%;
 	font-size: 48px;
-	color: #aaa;
+	color: #d1ebc7;
+	text-align: center;
+	background-color: #333;
 }
 
 p {
